Updated all section with correct white spacing

--- a/style8.css
+++ b/style8.css
@@ -4,15 +4,19 @@
     padding: 0;
 
 }
-li{
+
+li {
     list-style-type: none;
 }
-ul{
+
+ul {
     padding: 0;
 }
-.page-padding{
+
+.page-padding {
     padding: 100px auto;
 }
+
 .mainbody {
     background: #FBFAFF;
     font-family: 'Poppins', sans-serif;
@@ -30,6 +34,9 @@ ul{
 .logo img {
     width: 100%;
     max-width: 210px;
+    object-fit: cover;
+    padding: 0;
+    margin: 0;
 }
 
 .nav {
@@ -38,14 +45,17 @@ ul{
     padding: 10px auto;
     flex-wrap: nowrap;
 }
-.nav ul{
+
+.nav ul {
     display: flex;
 }
-.nav li{
+
+.nav li {
     flex: 1;
 }
+
 .nav-item {
-    padding: 20px ;
+    padding: 20px;
     margin: 0px;
     font-size: medium;
     cursor: pointer;
@@ -57,27 +67,31 @@ ul{
 }
 
 .nav-icon {
-    max-width: 2.5rem;
-    flex: 1;
+    max-width: 3rem;
+    object-fit: contain;
     border-radius: 50px;
+    flex: 1;
 }
 
 .select {
-    color:#514460;
+    color: #514460;
     margin-right: 20px;
     border: none;
     background: none;
 }
 
 .banner {
-    background: url(images/img-1.jpg)  center/cover;
+    background: url(images/img-1.jpg) center/cover;
 }
 
 .overlay {
     background: rgba(17, 18, 49, 0.9);
-    padding: 100px 100px 50px 100px ;
+    padding: 100px ;
 }
 
+#banner-id{
+    padding: 100px 100px 50px 100px;
+}
 .text-center {
     text-align: center;
     color: white;
@@ -101,7 +115,7 @@ ul{
     border-radius: 50px;
     font-weight: 600;
     cursor: pointer;
-    margin: 30px 10px 70px 10px;
+    margin: 30px 10px;
     font-size: small;
 }
 
@@ -120,14 +134,16 @@ ul{
 
 .down-arrow {
     width: 20px;
-    margin-top: 55px;
+    margin-top: 100px;
+    margin-bottom: 0;
 }
 
 .page2 {
     color: #514460;
     margin: 100px auto;
 }
-.page-display{
+
+.page-display {
     display: flex;
 }
 
@@ -168,6 +184,7 @@ ul{
 .point img {
     width: 7%;
 }
+
 .content-right img {
     width: 100%;
     height: 100%;
@@ -177,15 +194,13 @@ ul{
 
 .services-section {
     background: url(images/img-2.jpg) center/cover;
-
+    color: white;
+    text-align: center;
 }
 
 .section-title {
-    text-align: center;
     font-weight: 200;
     font-size: 3rem;
-    padding-top: 100px;
-    color: white;
 }
 
 .services {
@@ -194,30 +209,30 @@ ul{
 }
 
 .service-card {
-    width: 32%;
-    text-align: center;
-    color: white;
-}
-
-.service-card p {
-    width: 80%;
-    margin: 0% 10% 5% 10%;
-    opacity: 0.5;
+    width: calc(100/3);
 }
 
 .icon {
-    width: 120px;
-    height: 120px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.15);
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: auto;
+    margin: 40px auto;
+
 }
 
 .icon img {
-    width: 3rem;
+    object-fit: cover;
+    width: 2.8rem;
+}
+
+.service-card p {
+    margin: 20px;
+    font-size: 15px;
+    opacity: 0.9;
 }
 
 .buttons {
@@ -238,8 +253,9 @@ ul{
 
 .page4 p {
     color: #514460;
-    margin: 40px auto;
-    font-weight: 200;
+    margin: 30px auto;
+    font-weight: 300;
+    opacity: 0.8;
 }
 
 .portfolio-menu {
@@ -248,7 +264,7 @@ ul{
     font-size: 0.9rem;
     font-weight: 600;
     letter-spacing: 2px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .portfolio-menu span {
@@ -261,22 +277,19 @@ ul{
 .portfolio-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 180px;
-    gap: 25px;
+    grid-auto-rows: 280px;
+    gap: 40px;
 }
 
 
 .portfolio-item {
     width: 100%;
     height: 100%;
-    border: solid 10px #C2DDE6;
 }
 
 .portfolio-item:nth-child(1),
 .portfolio-item:nth-child(5) {
     grid-row: span 2;
-    border: solid 10px #D1D1D1 ;
-
 }
 
 .portfolio-item img {
@@ -291,8 +304,9 @@ ul{
     width: 100%;
     height: 100%;
     background: rgba(17, 18, 49, 0.9);
-    bottom: 160px;
-    right: -1px;
+    border: solid 10px #C2DDE6;
+    bottom: 280px;
+    right: 0px;
     color: white;
     justify-content: center;
     align-items: center;
@@ -300,7 +314,8 @@ ul{
 }
 
 .hidden-box img {
-    margin-top: 50px;
+    margin-top: 75px;
+    margin-bottom: 20px;
     width: 50px;
     height: 50px;
     border-radius: 50px;
@@ -308,33 +323,36 @@ ul{
 
 .hidden-box span {
     font-weight: 700;
+    margin-top: 50px auto;
 }
 
 .hidden-box p {
     font-weight: 500;
     line-height: 0.1;
-    margin: 10px;
+    margin: 20px;
 }
 
 .sk {
-    bottom: 365px;
-}
-
-.sk img{
-        margin-top: 150px;
+    bottom: 600px;
+    border: solid 10px #C2DDE6;
 
 }
 
-.portfolio-item img:hover + .hidden-box {
+.sk img {
+    margin-top: 210px;
+
+}
+
+.portfolio-item img:hover+.hidden-box {
     display: block;
 }
 
 .section5 {
     background: url(images/img-4.jpg) center/cover;
-    
     color: white;
-    margin: 100px auto;
+    padding: 100px auto;
     font-weight: 500;
+    text-align: center;
 }
 
 .section5 span {
@@ -343,23 +361,31 @@ ul{
 }
 
 .icons {
-    padding-top: 100px;
     display: flex;
+    padding: auto 50px;
+    justify-content: center;
+}
+.yellow{
+    width: 25%;
 }
 
+.yellow p{
+    font-weight: 600;
+    font-size: large;
+    margin-bottom: 10px;
+}
 .yellow:hover {
     color: #D0A904;
 }
 
-
 .pricing-plans {
     text-align: center;
     color: #514460;
-    margin: 50px auto;
+    padding: 100px;
 }
 
 .title p {
-    margin: 50px auto 80px;
+    margin: 50px auto 80px; 
     opacity: 0.5;
 }
 
@@ -369,7 +395,7 @@ ul{
 
 .plan-card {
     background-color: white;
-    box-shadow: black;
+    box-shadow: 1px 1px 1px 1px #E7E9EB;
     font-weight: 300;
     margin: auto 15px;
     padding: 30px;
@@ -397,10 +423,6 @@ ul{
     color: white;
 }
 
-.testimonial {
-    padding: 100px;
-}
-
 .T-title {
     font-weight: 200;
     line-height: 5;
@@ -411,6 +433,11 @@ ul{
 .T-title h2 {
     font-size: 3rem;
     font-weight: 200;
+}
+
+.T-title p{
+    font-weight: 400;
+    opacity: 0.5;
 }
 
 .T-title img {
@@ -427,16 +454,22 @@ ul{
 
 .testimony-cards {
     display: flex;
-    line-height: 3;
-}
-
-.testimony-card {
-    margin-right: 30px;
+    line-height: 2;
 }
 
 .testimony-card img {
     border-radius: 50%;
     height: 100px;
+    margin: 30px;
+}
+
+.testimony-card .highlight{
+    margin-bottom: 0;
+}
+
+.testimony-card i{
+    margin-top: 0;
+    font-size: x-small;
 }
 
 .testimony-card p {
@@ -445,12 +478,13 @@ ul{
 }
 
 .blog {
-    padding: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     color: #514460;
 }
 
 .blog p {
-    opacity: 0.5;
+    opacity: 0.4;
 }
 
 .posts {
@@ -461,6 +495,7 @@ ul{
     background-color: white;
     margin-right: 30px;
     width: calc(100/3);
+    font-size: medium;
 }
 
 .post img {
@@ -468,21 +503,21 @@ ul{
 }
 
 .post span {
-    font-size: x-large;
+    font-size: large;
     font-weight: 400;
-    padding-bottom: 50px;
 }
 
 .post div {
     padding: 30px;
-    padding-bottom: 0px;
 }
-
+.blog button{
+    margin: 15px;
+    margin-left: 0;
+}
 .footer {
     background-color: #3A376C;
     color: white;
     font-weight: 500;
-    padding-left: 100px;
 }
 
 footer img {
@@ -497,7 +532,7 @@ footer img {
 
 .links {
     width: calc(100/4);
-    margin-right: 60px;
+    line-height: 2;
     flex: 1;
 }
 
@@ -508,7 +543,7 @@ footer img {
 
 }
 
-.links li{
+.links li {
     opacity: 0.8;
     font-size: small;
     padding: 0;
@@ -518,24 +553,29 @@ footer img {
     display: flex;
     background-color: white;
     border-radius: 50px;
-    padding-left: 30px;
+    width: 90%;
+    height: 50px;
     overflow: hidden;
-    width: 70%;
-    height: 60px;
+    justify-content: center;
+    align-items: center;
 }
 
 .parent input {
-    width: 70%;
+    width: 81%;
+    padding-left: 30px;
+    border-radius: 50px;
 }
 
 .child {
     background-color: #D0A904;
-    width: 30%;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
     text-align: center;
 }
 
 .child img {
-    width: 25px;
+    width: 20px;
 }
 
 .footer input {
